# nivalis-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
shaders/: basic.wgsl
src/: engine.rs  main.rs
src/assets/: manager.rs  mod.rs  model.rs  texture.rs
src/entity/: mod.rs  world.rs
src/render/: assets.rs  entity.rs  mod.rs  world.rs
src/render/modules/: imgui.rs  mod.rs  pipeline.rs
src/renderer/: imgui.rs  layer.rs  mod.rs  pipeline.rs  text.rs
src/renderer/systems/: imgui.rs  mod.rs  pipeline.rs
src/util/: ext.rs  mod.rs
