[package]
name = "nivalis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
image = "0.25.6"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.11"
uuid = { version = "1.17", features = ["v4"] }
rand = "0.9.1"
glyphon = "0.9.0"
rust-embed = "8.2.0"
imgui-wgpu = "0.25.0"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
